src/test/contracts/negative/pattern_match1.jsligo
let test_foo = (x : test_exec_result) : string => {
  return match(x, {
    Fail: (_ : test_exec_error) => "",
  });
}